# opentracy-terminal-chat

./: .gitignore  README.md  aliases.sh  cleanup.py  cleanup.sh  config.toml  consertar.py  consertar_arquivos.py  continuidade_tarefas.md  docker-compose.yml  fix_bashrc.py  gerar_chat.py  gerar_parte1.py  gerar_repositorio.py  gerar_tudo.py  gerar_tudo.sh  implementacao_cous.js  pyproject.toml  restaurar_chat.py  restaurar_git.sh  test_fase4.py  test_structure.py  test_zip_support.py
.codewhale/: instructions.md
app/: __init__.py  auth.py  bootstrap.py  captura_serial.py  chat.py  chat_bloco_capturar.py  chat_bloco_laudo.py  chat_bloco_med.py  chat_bloco_router.py  chat_cmd_capturar.py  chat_cmd_laudo.py  chat_cmd_medicao.py  chat_cmd_medicoes.py  chat_p2_complete.py  chat_p3.py  chat_parte2.py  chat_parte_utils_e_captura.py  chat_router_loop.py  chat_utils_compact.py  command_router.py  config.py  corpus_client.py  formulario_coleta.py  knowledge_syncer.py  laudo_tecnico.py  logger.py  main.py  memory.py  opentracy_client.py  renderer.py  repositorio_medicoes.py  test_3kb.py  test_final.py  test_large.py  test_medium.txt  test_medium2.py  validador_conhecimento.py
docs/: LigadoAI_Terminal_Chat.md  LigadoAI_Terminal_Chat_Melhorias.md  analyze_secrets.py  comandos_OpenTracy_Chat.md  erros.txt  find_secrets.py  plano-reconstrucao-cous-opentracy.md  run_analysis.py  run_secrets.py  saida_implementação.txt
index/: 1.docx  10.docx  11.docx  16dct_pm.md  2.docx  22dcp_pm.md  4.docx  5.docx  6.docx  7.docx  8.docx  9.docx  EN_1724_SR_DFF.md  EN_1727_CXR_DFF.md  (+7 more)
(+111 files in other folders)
