[project]
name = "ligadoai-terminal-chat"
version = "0.1.0"
description = "CLI terminal chat for OpenTracy + DeepSeek"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
docs = [
    "pymupdf>=1.23",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
ligadoai = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "ligadoai_tools*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
